@@ -4,7 +4,7 @@ import fj.Equal;
 import fj.data.Option;
 
 import edu.colorado.phet.common.phetcommon.model.property.ChangeObserver;
-import edu.colorado.phet.fractionsintro.buildafraction.view.ContainerID;
+import edu.colorado.phet.fractionsintro.buildafraction.view.ObjectID;
 
 /**
  * Provides a listener layer interface for listening to a specific container and whether it enters or leaves the model.
@@ -12,9 +12,9 @@ import edu.colorado.phet.fractionsintro.buildafraction.view.ContainerID;
  * @author Sam Reid
  */
 public abstract class ContainerObserver implements ChangeObserver<BuildAFractionState> {
-    public final ContainerID id;
+    public final ObjectID id;
 
-    public ContainerObserver( final ContainerID id ) {this.id = id;}
+    public ContainerObserver( final ObjectID id ) {this.id = id;}
 
     @Override public void update( final BuildAFractionState newValue, final BuildAFractionState oldValue ) {
         final Option<Container> old = oldValue.getContainer( id );
