@@ -7,19 +7,14 @@ import java.awt.BasicStroke;
 import java.awt.Color;
 import java.awt.Paint;
 import java.awt.Stroke;
-import java.awt.geom.Point2D;
 import java.awt.geom.Rectangle2D;
 import java.awt.geom.RoundRectangle2D;
 import java.util.Collection;
 
 import javax.swing.JRadioButton;
 
-import edu.colorado.phet.common.phetcommon.model.Bucket;
-import edu.colorado.phet.common.phetcommon.view.Dimension2DDouble;
-import edu.colorado.phet.common.phetcommon.view.graphics.transforms.ModelViewTransform;
 import edu.colorado.phet.common.piccolophet.RichPNode;
 import edu.colorado.phet.common.piccolophet.event.CursorHandler;
-import edu.colorado.phet.common.piccolophet.nodes.BucketView;
 import edu.colorado.phet.common.piccolophet.nodes.PhetPPath;
 import edu.colorado.phet.common.piccolophet.nodes.PhetPText;
 import edu.colorado.phet.common.piccolophet.nodes.Spacer;
@@ -43,6 +38,7 @@ import static fj.data.List.range;
 
 /**
  * Main simulation canvas for "build a fraction" tab
+ * TODO: duplicated code in pieceTool pieceGraphic DraggablePieceNode
  *
  * @author Sam Reid
  */
@@ -77,13 +73,13 @@ public class BuildAFractionCanvas extends AbstractFractionsCanvas {
             addChild( border );
             final F<Integer, PNode> toBar = new F<Integer, PNode>() {
                 @Override public PNode f( final Integer i ) {
-                    return barTool( new Container( ContainerID.nextID(), i + 1, rowColumnToPoint( i % 2, i / 2 ), false ), model, BuildAFractionCanvas.this );
+                    return barTool( new Container( ObjectID.nextID(), i + 1, rowColumnToPoint( i % 2, i / 2 ), false ), model, BuildAFractionCanvas.this );
                 }
             };
             addChild( new FNode( range( 0, 8 ).map( toBar ) ) {{
                 centerFullBoundsOnPoint( border.getCenterX(), border.getCenterY() );
             }} );
-            setOffset( ( STAGE_SIZE.width - rightControlPanel.getFullWidth() ) / 2 - this.getFullWidth() / 2, INSET );
+            setOffset( ( STAGE_SIZE.width - rightControlPanel.getFullWidth() ) / 2 - this.getFullWidth() / 2, STAGE_SIZE.height - INSET - this.getFullHeight() );
         }} );
 
         //Bucket view at the bottom of the screen
@@ -91,11 +87,20 @@ public class BuildAFractionCanvas extends AbstractFractionsCanvas {
             final PhetPPath border = new PhetPPath( new RoundRectangle2D.Double( 0, 0, 700, 150, 30, 30 ), stroke, Color.darkGray );
             addChild( border );
 
-            BucketView bucketView = new BucketView( new Bucket( 150, -50, new Dimension2DDouble( 200, 100 ), Color.blue, "pieces" ), ModelViewTransform.createOffsetScaleMapping( new Point2D.Double( 0, 0 ), 1, -1 ) );
-            addChild( bucketView.getHoleNode() );
-            addChild( bucketView.getFrontNode() );
+//            BucketView bucketView = new BucketView( new Bucket( 150, -50, new Dimension2DDouble( 200, 100 ), Color.blue, "pieces" ), ModelViewTransform.createOffsetScaleMapping( new Point2D.Double( 0, 0 ), 1, -1 ) );
+//            addChild( bucketView.getHoleNode() );
+//            addChild( bucketView.getFrontNode() );
 
-            setOffset( ( STAGE_SIZE.width - rightControlPanel.getFullWidth() ) / 2 - this.getFullWidth() / 2, STAGE_SIZE.height - INSET - this.getFullHeight() );
+            final F<Integer, PNode> toBar = new F<Integer, PNode>() {
+                @Override public PNode f( final Integer i ) {
+                    return pieceTool( new Container( ObjectID.nextID(), i + 1, rowColumnToPoint( i % 2, i / 2 ), false ), model, BuildAFractionCanvas.this );
+                }
+            };
+            addChild( new FNode( range( 0, 8 ).map( toBar ) ) {{
+                centerFullBoundsOnPoint( border.getCenterX(), border.getCenterY() );
+            }} );
+
+            setOffset( ( STAGE_SIZE.width - rightControlPanel.getFullWidth() ) / 2 - this.getFullWidth() / 2, INSET );
         }} );
 
         //The draggable containers
@@ -127,6 +132,50 @@ public class BuildAFractionCanvas extends AbstractFractionsCanvas {
         }};
     }
 
+    public static PNode pieceGraphic( final Container container ) {
+        return new PNode() {{
+            final double sliceWidth = barWidth / container.numSegments;
+            List<PNode> nodes = range( 0, 1 ).map( new F<Integer, PNode>() {
+                @Override public PNode f( final Integer i ) {
+                    return new PhetPPath( new Rectangle2D.Double( i * sliceWidth, 0, sliceWidth, barHeight ), Color.green, new BasicStroke( 1 ), Color.black );
+                }
+            } );
+            addChild( new FNode( nodes ) );
+            setOffset( container.position.toPoint2D() );
+        }};
+    }
+
+    public static PNode pieceTool( final Container container, final BuildAFractionModel model, final BuildAFractionCanvas canvas ) {
+        return new PNode() {{
+            addChild( pieceGraphic( container ) );
+            addInputEventListener( new CursorHandler() );
+            addInputEventListener( new PBasicInputEventHandler() {
+                @Override public void mousePressed( final PInputEvent event ) {
+
+                    //Find out where to put the bar in stage coordinate frame, transform through the root node.
+                    PBounds bounds = getGlobalFullBounds();
+                    Rectangle2D localBounds = canvas.rootNode.globalToLocal( bounds );
+
+                    final Container c = new Container( ObjectID.nextID(), container.numSegments, new Vector2D( localBounds.getX(), localBounds.getY() ), true );
+                    model.update( new ModelUpdate() {
+                        @Override public BuildAFractionState update( final BuildAFractionState state ) {
+                            return state.addContainer( c );
+                        }
+                    } );
+                    canvas.containerLayer.addChild( new DraggablePieceNode( c.id, model, canvas ) );
+                }
+
+                @Override public void mouseReleased( final PInputEvent event ) {
+                    model.update( RELEASE_ALL );
+                }
+
+                @Override public void mouseDragged( final PInputEvent event ) {
+                    model.drag( event.getDeltaRelativeTo( canvas.rootNode ) );
+                }
+            } );
+        }};
+    }
+
     public static PNode barTool( final Container container, final BuildAFractionModel model, final BuildAFractionCanvas canvas ) {
         return new PNode() {{
             addChild( barGraphic( container ) );
@@ -138,7 +187,7 @@ public class BuildAFractionCanvas extends AbstractFractionsCanvas {
                     PBounds bounds = getGlobalFullBounds();
                     Rectangle2D localBounds = canvas.rootNode.globalToLocal( bounds );
 
-                    final Container c = new Container( ContainerID.nextID(), container.numSegments, new Vector2D( localBounds.getX(), localBounds.getY() ), true );
+                    final Container c = new Container( ObjectID.nextID(), container.numSegments, new Vector2D( localBounds.getX(), localBounds.getY() ), true );
                     model.update( new ModelUpdate() {
                         @Override public BuildAFractionState update( final BuildAFractionState state ) {
                             return state.addContainer( c );
