@@ -5,9 +5,9 @@ import lombok.Data;
 /**
  * @author Sam Reid
  */
-public @Data class ContainerID {
+public @Data class ObjectID {
     public final int id;
     private static int count = 0;
 
-    public static ContainerID nextID() { return new ContainerID( count++ ); }
+    public static ObjectID nextID() { return new ObjectID( count++ ); }
 }
